aligned text, removed horizontal scroll, fixed issue with languages

--- a/client/src/app/site/pages/meetings/pages/participants/pages/mandate-check/components/mandate-check-list/mandate-check-list.component.scss
+++ b/client/src/app/site/pages/meetings/pages/participants/pages/mandate-check/components/mandate-check-list/mandate-check-list.component.scss
@@ -36,52 +36,53 @@
 
 .header-grid {
     display: grid;
-    grid-template-columns: 95% 5%;
+    grid-template-columns: 92% 8%;
+    max-width: inherit;
+    margin-top: 50px;
+    & h2 {
+        margin-top: 0;
+        margin-bottom: 0;
+        align-self: center;
+    }
+
+    @include media-queries.set-breakpoint-lower(xs) {
+        grid-template-columns: 84% 8%;
+    }
 }
 
 mat-card {
-    overflow-block: auto;
+    max-width: 100vw;
     display: inline-flex;
     scrollbar-width: none;
 }
 
-.card-grid {
-    display: grid;
-    white-space: nowrap;
-    --center-width: 60%;
-    --columns-width: 8%;
-    grid-template-columns: var(--columns-width) 2fr var(--center-width) 2fr var(--columns-width);
-    grid-gap: 10px;
-    @include media-queries.set-breakpoint-lower(xs) {
-        --columns-width: 6%;
-        --center-width: 40%;
-    }
-    @include media-queries.set-breakpoint-upper(md) {
-        --columns-width: 6.5%;
-        --center-width: 60%;
-    }
-    @include media-queries.set-breakpoint-upper(lg) {
-        --columns-width: 9%;
-        --center-width: 70%;
+mat-progress-bar,
+mat-progress-bar * {
+    width: 100%;
+    min-width: 0;
+    @include media-queries.set-breakpoint-lower(430px) {
+        max-width: 20%;
+        min-width: 0;
+        padding: 0;
     }
 }
 
-.gender-map-grid {
+.gender-map-grid1 {
+    max-width: inherit;
     display: grid;
+    gap: 10px;
     .row {
+        max-width: inherit;
+        display: grid;
         white-space: nowrap;
         padding: 1em 0em 1em 0em;
-        display: grid;
-        --center-width: 60%;
-        --columns-width: 10%;
-        grid-template-columns: var(--columns-width) 2fr var(--center-width) 2fr var(--columns-width);
-        @include media-queries.set-breakpoint-upper(md) {
-            --columns-width: 8%;
-            --center-width: 60%;
+        grid-template-columns: 8fr 10fr 60fr 10fr 8fr;
+        & div {
+            width: 100%;
         }
-        @include media-queries.set-breakpoint-upper(lg) {
-            --columns-width: 10%;
-            --center-width: 70%;
+        .central-element {
+            max-width: 90%;
+            min-width: 0;
         }
     }
     .row:not(:last-child) {
@@ -134,6 +135,10 @@ mat-card {
     margin-bottom: 20px;
 }
 
+.margin-auto {
+    margin: auto;
+}
+
 button {
     border-radius: 0%;
 }
@@ -158,4 +163,16 @@ button {
 
 .text-medium {
     font-size: 14px;
+}
+
+.min-width-98 {
+    min-width: 98px;
+}
+
+.min-width-50 {
+    min-width: 50px;
+}
+
+.padding-right {
+    padding-right: 1em;
 }
